--- a/Tracker/Tracker/Tracker.app/Tracker.app.csproj
+++ b/Tracker/Tracker/Tracker.app/Tracker.app.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tracker.domain\Tracker.domain.csproj" />
+  </ItemGroup>
+
 </Project>
