--- a/Tracker/Tracker/Tracker.app/Tracker.app.csproj
+++ b/Tracker/Tracker/Tracker.app/Tracker.app.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tracker.domain\Tracker.domain.csproj" />
   </ItemGroup>
 
